# reciprocity-calibration-hardware

./: README.md
firmware/usrp-pll-board-firmware/lib/MAX2871/: MAX2871.cpp  MAX2871.h
firmware/usrp-pll-board-firmware/src/: main.cpp
hardware/ursp-pll-board/: Versie 5.brd  Versie 5.sch  Versie 6.brd  Versie 6.sch
pll-lib/: pyproject.toml
pll-lib/examples/: setup_PLL.py
software/: example.py  pll.py  setup_PLL.py
