[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pll_lib_techtile"
version = "0.0.1"
authors = [
  { name="Guus Leenders" },
  { name="Gilles Callebaut" },
  { name="Jarne Van Mulders" }
]
description = "package for Techtile PLL"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
